--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -1,4 +1,4 @@
-name: e2e tests
+name: e2e tests and deploy
 
 on:
   push:
@@ -7,10 +7,11 @@ on:
   pull_request:
     branches:
       - main
+  workflow_dispatch:    # <-- This enables manual triggering
 
 env:
   WASP_TELEMETRY_DISABLE: 1
-  WASP_VERSION: 0.17.0
+  WASP_VERSION: 0.16.4
 
 jobs:
   test:
@@ -19,6 +20,9 @@ jobs:
     steps:
       - name: Checkout the repo
         uses: actions/checkout@v4
+      - name: Change to template directory
+        run: echo "Changed directory to template"
+        working-directory: ./template
 
       - name: Setup Node.js
         id: setup-node
@@ -40,31 +44,21 @@ jobs:
           restore-keys: |
             node-modules-${{ runner.os }}-
 
-      # In order for the app to run in the dev mode we need to set the required env vars even if
-      # they aren't actually used by the app. This step sets mock env vars in order to pass the
-      # validation steps so the app can run in the CI environment. For env vars that are actually
-      # used in tests and therefore need real values, we set them in the GitHub secrets settings and
-      # access them in a step below.
       - name: Set required wasp app env vars to mock values
-        working-directory: ./template
+        working-directory: ./
         run: |
           cd app
           cp .env.server.example .env.server && cp .env.client.example .env.client
 
-      - name: Check that patching demo app (opensaas-sh) works
-        working-directory: ./opensaas-sh
-        run: |
-          ./tools/patch.sh
-
       - name: '[e2e-tests] Install Node.js dependencies for Playwright tests'
         if: steps.cache-e2e-tests.outputs.cache-hit != 'true'
-        working-directory: ./template
+        working-directory: ./
         run: |
           cd e2e-tests
           npm ci
 
       - name: "[e2e-tests] Store Playwright's Version"
-        working-directory: ./template
+        working-directory: ./
         run: |
           cd e2e-tests
           PLAYWRIGHT_VERSION=$(npm ls @playwright/test | grep @playwright | sed 's/.*@//')
@@ -80,7 +74,7 @@ jobs:
 
       - name: '[e2e-tests] Set up Playwright'
         if: steps.cache-playwright-browsers.outputs.cache-hit != 'true'
-        working-directory: ./template
+        working-directory: ./
         run: |
           cd e2e-tests
           npx playwright install --with-deps
@@ -92,9 +86,6 @@ jobs:
           sudo apt update
           sudo apt install stripe
 
-      # For Stripe webhooks to work in development, we need to run the Stripe CLI to listen for webhook events.
-      # The Stripe CLI will receive the webhook events from Stripe test payments and
-      # forward them to our local server so that we can test the payment flow in our e2e tests.
       - name: '[e2e-tests] Run Stripe CLI to listen for webhooks'
         env:
           STRIPE_DEVICE_NAME: ${{ secrets.STRIPE_DEVICE_NAME }}
@@ -103,8 +94,6 @@ jobs:
 
       - name: '[e2e-tests] Run Playwright tests'
         env:
-          # The e2e tests are testing parts of the app that need certain env vars, so we need to access them here.
-          # These secretes can be set in your GitHub repo settings, e.g. https://github.com/<account>/<repo>/settings/secrets/actions
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           STRIPE_API_KEY: ${{ secrets.STRIPE_KEY }}
           STRIPE_WEBHOOK_SECRET: ${{ secrets.STRIPE_WEBHOOK_SECRET }}
@@ -113,9 +102,30 @@ jobs:
           PAYMENTS_PRO_SUBSCRIPTION_PLAN_ID: ${{ secrets.STRIPE_PRO_SUBSCRIPTION_PRICE_ID }}
           PAYMENTS_CREDITS_10_PLAN_ID: ${{ secrets.STRIPE_CREDITS_PRICE_ID }}
           SKIP_EMAIL_VERIFICATION_IN_DEV: true
-          # Client-side env vars
           REACT_APP_GOOGLE_ANALYTICS_ID: G-H3LSJCK95H
-        working-directory: ./template
+        working-directory: ./
         run: |
           cd e2e-tests
           npm run e2e:playwright
+
+  deploy:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - name: SSH to GCP VM and deploy app
+        uses: appleboy/ssh-action@v0.1.8
+        with:
+          host: ${{ secrets.GCP_VM_IP }}
+          username: ${{ secrets.GCP_VM_USERNAME }}
+          key: ${{ secrets.GCP_VM_SSH_KEY }}
+          script: |
+           cd  testing/
+            git pull origin main
+            cd app/
+            
+            export PATH=$PATH:/home/fusionprixofficial/.local/bin:/home/fusionprixofficial/.nvm/versions/node/v20.19.2/bin
+            
+            which node
+            which wasp
+            
+            wasp start
