--- a/template/app/package.json
+++ b/template/app/package.json
@@ -51,6 +51,7 @@
     "@types/react": "^18.0.37",
     "prisma": "5.19.1",
     "typescript": "5.8.2",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "vite-plugin-pwa": "^1.0.1"
   }
 }
