--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
     branches:
       - main
-  workflow_dispatch:    # <-- This enables manual triggering
+  workflow_dispatch:
 
 env:
   WASP_TELEMETRY_DISABLE: 1
@@ -20,9 +20,6 @@ jobs:
     steps:
       - name: Checkout the repo
         uses: actions/checkout@v4
-      - name: Change to template directory
-        run: echo "Changed directory to template"
-        working-directory: ./template
 
       - name: Setup Node.js
         id: setup-node
@@ -45,22 +42,17 @@ jobs:
             node-modules-${{ runner.os }}-
 
       - name: Set required wasp app env vars to mock values
-        working-directory: ./
+        working-directory: ./template/app
         run: |
-          cd app
           cp .env.server.example .env.server && cp .env.client.example .env.client
 
       - name: '[e2e-tests] Install Node.js dependencies for Playwright tests'
-        if: steps.cache-e2e-tests.outputs.cache-hit != 'true'
-        working-directory: ./
-        run: |
-          cd e2e-tests
-          npm ci
+        working-directory: ./template/e2e-tests
+        run: npm ci
 
       - name: "[e2e-tests] Store Playwright's Version"
-        working-directory: ./
+        working-directory: ./template/e2e-tests
         run: |
-          cd e2e-tests
           PLAYWRIGHT_VERSION=$(npm ls @playwright/test | grep @playwright | sed 's/.*@//')
           echo "Playwright's Version: $PLAYWRIGHT_VERSION"
           echo "PLAYWRIGHT_VERSION=$PLAYWRIGHT_VERSION" >> $GITHUB_ENV
@@ -74,10 +66,8 @@ jobs:
 
       - name: '[e2e-tests] Set up Playwright'
         if: steps.cache-playwright-browsers.outputs.cache-hit != 'true'
-        working-directory: ./
-        run: |
-          cd e2e-tests
-          npx playwright install --with-deps
+        working-directory: ./template/e2e-tests
+        run: npx playwright install --with-deps
 
       - name: '[e2e-tests] Install Stripe CLI'
         run: |
@@ -103,10 +93,8 @@ jobs:
           PAYMENTS_CREDITS_10_PLAN_ID: ${{ secrets.STRIPE_CREDITS_PRICE_ID }}
           SKIP_EMAIL_VERIFICATION_IN_DEV: true
           REACT_APP_GOOGLE_ANALYTICS_ID: G-H3LSJCK95H
-        working-directory: ./
-        run: |
-          cd e2e-tests
-          npm run e2e:playwright
+        working-directory: ./template/e2e-tests
+        run: npm run e2e:playwright
 
   deploy:
     needs: test
@@ -119,13 +107,13 @@ jobs:
           username: ${{ secrets.GCP_VM_USERNAME }}
           key: ${{ secrets.GCP_VM_SSH_KEY }}
           script: |
-           cd  testing/
+            cd testing/template/
             git pull origin main
             cd app/
-            
+
             export PATH=$PATH:/home/fusionprixofficial/.local/bin:/home/fusionprixofficial/.nvm/versions/node/v20.19.2/bin
-            
+
             which node
             which wasp
-            
+
             wasp start
