--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -23,88 +23,123 @@ env:
   DOCKER_REGISTRY_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
-  test:
+  # test:
+  #   runs-on: ubuntu-latest
+
+  #   steps:
+  #     - name: Checkout the repo
+  #       uses: actions/checkout@v4
+
+  #     - name: Setup Node.js
+  #       id: setup-node
+  #       uses: actions/setup-node@v4
+  #       with:
+  #         node-version: '20'
+
+  #     - name: Docker setup
+  #       uses: docker/setup-buildx-action@v3
+
+  #     - name: Install Wasp
+  #       run: curl -sSL https://get.wasp.sh/installer.sh | sh -s -- -v ${{ env.WASP_VERSION }}
+
+  #     - name: Cache global node modules
+  #       uses: actions/cache@v4
+  #       with:
+  #         path: ~/.npm
+  #         key: node-modules-${{ runner.os }}-${{ hashFiles('template/app/package-lock.json') }}-${{ hashFiles('template/e2e-tests/package-lock.json') }}-wasp${{ env.WASP_VERSION }}-node${{ steps.setup-node.outputs.node-version }}
+  #         restore-keys: |
+  #           node-modules-${{ runner.os }}-
+
+  #     - name: Set required wasp app env vars to mock values
+  #       working-directory: ./template/app
+  #       run: |
+  #         cp .env.server.example .env.server && cp .env.client.example .env.client
+
+  #     - name: '[e2e-tests] Install Node.js dependencies for Playwright tests'
+  #       working-directory: ./template/e2e-tests
+  #       run: npm ci
+
+  #     - name: "[e2e-tests] Store Playwright's Version"
+  #       working-directory: ./template/e2e-tests
+  #       run: |
+  #         PLAYWRIGHT_VERSION=$(npm ls @playwright/test | grep @playwright | sed 's/.*@//')
+  #         echo "Playwright's Version: $PLAYWRIGHT_VERSION"
+  #         echo "PLAYWRIGHT_VERSION=$PLAYWRIGHT_VERSION" >> $GITHUB_ENV
+
+  #     - name: "[e2e-tests] Cache Playwright Browsers for Playwright's Version"
+  #       id: cache-playwright-browsers
+  #       uses: actions/cache@v4
+  #       with:
+  #         path: ~/.cache/ms-playwright
+  #         key: playwright-browsers-${{ env.PLAYWRIGHT_VERSION }}-${{ runner.os }}
+
+  #     - name: '[e2e-tests] Set up Playwright'
+  #       if: steps.cache-playwright-browsers.outputs.cache-hit != 'true'
+  #       working-directory: ./template/e2e-tests
+  #       run: npx playwright install --with-deps
+
+  #     - name: '[e2e-tests] Install Stripe CLI'
+  #       run: |
+  #         curl -s https://packages.stripe.dev/api/security/keypair/stripe-cli-gpg/public | gpg --dearmor | sudo tee /usr/share/keyrings/stripe.gpg
+  #         echo "deb [signed-by=/usr/share/keyrings/stripe.gpg] https://packages.stripe.dev/stripe-cli-debian-local stable main" | sudo tee -a /etc/apt/sources.list.d/stripe.list
+  #         sudo apt update
+  #         sudo apt install stripe
+
+  #     - name: '[e2e-tests] Run Stripe CLI to listen for webhooks'
+  #       env:
+  #         STRIPE_DEVICE_NAME: ${{ secrets.STRIPE_DEVICE_NAME }}
+  #       run: |
+  #         stripe listen --api-key ${{ secrets.STRIPE_KEY }} --forward-to localhost:3001/payments-webhook &
+
+  #     - name: '[e2e-tests] Run Playwright tests'
+  #       env:
+  #         OPENAI_API_KEY: dummy-key-for-testing
+  #         STRIPE_API_KEY: dummy-stripe-key
+  #         STRIPE_WEBHOOK_SECRET: dummy-webhook-secret
+  #         STRIPE_CUSTOMER_PORTAL_URL: https://billing.stripe.com/p/login/test_8wM8x17JN7DT4zC000
+  #         PAYMENTS_HOBBY_SUBSCRIPTION_PLAN_ID: dummy-hobby-plan
+  #         PAYMENTS_PRO_SUBSCRIPTION_PLAN_ID: dummy-pro-plan
+  #         PAYMENTS_CREDITS_10_PLAN_ID: dummy-credits-plan
+  #         SKIP_EMAIL_VERIFICATION_IN_DEV: true
+  #         REACT_APP_GOOGLE_ANALYTICS_ID: G-H3LSJCK95H
+  #       working-directory: ./template/e2e-tests
+  #       run: npm run e2e:playwright
+
+
+  deploy:
+    needs: test
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout the repo
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        id: setup-node
-        uses: actions/setup-node@v4
+      - name: Log in to the Container registry
+        uses: docker/login-action@v3
         with:
-          node-version: '20'
+          registry: ghcr.io
+          username: ${{ env.DOCKER_REGISTRY_USERNAME }}
+          password: ${{ env.DOCKER_REGISTRY_PASSWORD }}
 
-      - name: Docker setup
-        uses: docker/setup-buildx-action@v3
-
-      - name: Install Wasp
-        run: curl -sSL https://get.wasp.sh/installer.sh | sh -s -- -v ${{ env.WASP_VERSION }}
-
-      - name: Cache global node modules
-        uses: actions/cache@v4
+      - name: (server) Extract metadata for Docker
+        id: meta-server
+        uses: docker/metadata-action@v5
         with:
-          path: ~/.npm
-          key: node-modules-${{ runner.os }}-${{ hashFiles('template/app/package-lock.json') }}-${{ hashFiles('template/e2e-tests/package-lock.json') }}-wasp${{ env.WASP_VERSION }}-node${{ steps.setup-node.outputs.node-version }}
-          restore-keys: |
-            node-modules-${{ runner.os }}-
+          images: ${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_REGISTRY_USERNAME }}/${{ env.SERVER_APP_NAME }}
 
-      - name: Set required wasp app env vars to mock values
-        working-directory: ./template/app
-        run: |
-          cp .env.server.example .env.server && cp .env.client.example .env.client
-
-      - name: '[e2e-tests] Install Node.js dependencies for Playwright tests'
-        working-directory: ./template/e2e-tests
-        run: npm ci
-
-      - name: "[e2e-tests] Store Playwright's Version"
-        working-directory: ./template/e2e-tests
-        run: |
-          PLAYWRIGHT_VERSION=$(npm ls @playwright/test | grep @playwright | sed 's/.*@//')
-          echo "Playwright's Version: $PLAYWRIGHT_VERSION"
-          echo "PLAYWRIGHT_VERSION=$PLAYWRIGHT_VERSION" >> $GITHUB_ENV
-
-      - name: "[e2e-tests] Cache Playwright Browsers for Playwright's Version"
-        id: cache-playwright-browsers
-        uses: actions/cache@v4
+      - name: (client) Extract metadata for Docker
+        id: meta-client
+        uses: docker/metadata-action@v5
         with:
-          path: ~/.cache/ms-playwright
-          key: playwright-browsers-${{ env.PLAYWRIGHT_VERSION }}-${{ runner.os }}
+          images: ${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_REGISTRY_USERNAME }}/${{ env.CLIENT_APP_NAME }}
 
-      - name: '[e2e-tests] Set up Playwright'
-        if: steps.cache-playwright-browsers.outputs.cache-hit != 'true'
-        working-directory: ./template/e2e-tests
-        run: npx playwright install --with-deps
-
-      - name: '[e2e-tests] Install Stripe CLI'
+      - name: Install root npm dependencies
         run: |
-          curl -s https://packages.stripe.dev/api/security/keypair/stripe-cli-gpg/public | gpg --dearmor | sudo tee /usr/share/keyrings/stripe.gpg
-          echo "deb [signed-by=/usr/share/keyrings/stripe.gpg] https://packages.stripe.dev/stripe-cli-debian-local stable main" | sudo tee -a /etc/apt/sources.list.d/stripe.list
-          sudo apt update
-          sudo apt install stripe
+          cd ./template/app
+          npm install
 
-      - name: '[e2e-tests] Run Stripe CLI to listen for webhooks'
-        env:
-          STRIPE_DEVICE_NAME: ${{ secrets.STRIPE_DEVICE_NAME }}
+      - name: Build Wasp app (generates .wasp/build and its package.json)
+        shell: bash
         run: |
-          stripe listen --api-key ${{ secrets.STRIPE_KEY }} --forward-to localhost:3001/payments-webhook &
+          cd ./template/app
+          wasp build
 
-      - name: '[e2e-tests] Run Playwright tests'
-        env:
-          OPENAI_API_KEY: dummy-key-for-testing
-          STRIPE_API_KEY: dummy-stripe-key
-          STRIPE_WEBHOOK_SECRET: dummy-webhook-secret
-          STRIPE_CUSTOMER_PORTAL_URL: https://billing.stripe.com/p/login/test_8wM8x17JN7DT4zC000
-          PAYMENTS_HOBBY_SUBSCRIPTION_PLAN_ID: dummy-hobby-plan
-          PAYMENTS_PRO_SUBSCRIPTION_PLAN_ID: dummy-pro-plan
-          PAYMENTS_CREDITS_10_PLAN_ID: dummy-credits-plan
-          SKIP_EMAIL_VERIFICATION_IN_DEV: true
-          REACT_APP_GOOGLE_ANALYTICS_ID: G-H3LSJCK95H
-        working-directory: ./template/e2e-tests
-        run: npm run e2e:Playwright
-        
       - name: (client) Build
         run: |
           cd ./template/./.wasp/build/web-app
