--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -107,7 +107,7 @@ jobs:
 
 
   deploy:
-    needs: test
+    # needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Log in to the Container registry
