--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -116,7 +116,8 @@ jobs:
           registry: ghcr.io
           username: ${{ env.DOCKER_REGISTRY_USERNAME }}
           password: ${{ env.DOCKER_REGISTRY_PASSWORD }}
-
+      - name: Checkout the repo
+        uses: actions/checkout@v4
       - name: Debug repo structure
         run: |
           echo "Current directory: $(pwd)"
