--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -147,7 +147,12 @@ jobs:
         working-directory: ./template/./.wasp/build/web-app
         run: |
           REACT_APP_API_URL=${{ env.SERVER_APP_URL }} REACT_APP_GOOGLE_ANALYTICS_ID=G-QJ5ZFJ024D npm run build
-
+      - name: List all folders and files
+        working-directory: ./template
+        run: |
+          echo "Current directory: $(pwd)"
+          echo "Listing all folders and files recursively:"
+          ls -R
       - name: (client) Prepare the Dockerfile
         shell: bash
         working-directory: ./template/./.wasp/build/web-app
