--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -122,9 +122,9 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           # REMOVE the `app` bit from the path if your app is not in the `app` folde
-          context: ./app/.wasp/build/web-app
+          context: ./template/app/.wasp/build/web-app
           # REMOVE the `app` bit from the path if your app is not in the `app` folder
-          file: ./app/.wasp/build/web-app/Dockerfile
+          file: ./template/app/.wasp/build/web-app/Dockerfile
           push: true
           tags: ${{ steps.meta-client.outputs.tags }}
           labels: ${{ steps.meta-client.outputs.labels }}
