--- a/template/app/package.json
+++ b/template/app/package.json
@@ -1,6 +1,12 @@
 {
   "name": "opensaas",
   "type": "module",
+  "scripts": {
+    "add-app": "node src/apps/add-app.cjs",
+    "remove-app": "node src/apps/remove-app.cjs",
+    "update-routes": "node src/apps/auto-update-routes.cjs",
+    "watch-apps": "node src/apps/watch-and-update.cjs"
+  },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.523.0",
     "@aws-sdk/s3-presigned-post": "^3.750.0",
