--- a/apps/demo-react-app/package.json
+++ b/apps/demo-react-app/package.json
@@ -15,7 +15,8 @@
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.0",
