--- a/.github/workflows/deploy-demo-apps.yml
+++ b/.github/workflows/deploy-demo-apps.yml
@@ -133,6 +133,9 @@ jobs:
           username: ${{ env.DOCKER_REGISTRY_USERNAME }}
           password: ${{ env.DOCKER_REGISTRY_PASSWORD }}
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Extract metadata for Docker
         id: meta
         uses: docker/metadata-action@v5
@@ -181,9 +184,8 @@ jobs:
           # Install curl for health checks
           RUN apk add --no-cache curl
 
-          # Copy built files (check both dist and build directories)
-          COPY --from=builder /app/dist /usr/share/nginx/html 2>/dev/null || \
-          COPY --from=builder /app/build /usr/share/nginx/html
+          # Copy built files from dist directory
+          COPY --from=builder /app/dist /usr/share/nginx/html
 
           # Copy custom nginx config for SPA with Module Federation
           COPY nginx.conf /etc/nginx/conf.d/default.conf
@@ -268,7 +270,6 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          platforms: linux/amd64,linux/arm64
 
   build-static-demos:
     needs: detect-changes
@@ -288,6 +289,9 @@ jobs:
           registry: ${{ env.DOCKER_REGISTRY }}
           username: ${{ env.DOCKER_REGISTRY_USERNAME }}
           password: ${{ env.DOCKER_REGISTRY_PASSWORD }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Extract metadata for static demos
         id: meta
@@ -429,7 +433,6 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          platforms: linux/amd64,linux/arm64
 
   deploy-to-coolify:
     needs: [detect-changes, build-demo-react-app, build-static-demos]
