--- a/.github/workflows/deploy-demo-apps.yml
+++ b/.github/workflows/deploy-demo-apps.yml
@@ -85,13 +85,31 @@ jobs:
           COOLIFY_API_URL: ${{ env.COOLIFY_API_URL }}
           COOLIFY_TOKEN: ${{ env.COOLIFY_TOKEN }}
         run: |
-          # 1. Get app ID (assumes project already exists)
+          # 1. Get app ID (create project if it doesn't exist)
           app_response=$(curl -s -H "Authorization: Bearer $COOLIFY_TOKEN" "$COOLIFY_API_URL/apps?name=$APP_NAME")
           app_id=$(echo "$app_response" | jq -r '.data[0].id')
 
           if [ -z "$app_id" ] || [ "$app_id" == "null" ]; then
-            echo "App ID not found for $APP_NAME. Please create the project manually."
-            exit 1
+            echo "App not found for $APP_NAME, creating new app/project..."
+            
+            # Create a new app/project
+            create_app_response=$(curl -s -X POST \
+              -H "Authorization: Bearer $COOLIFY_TOKEN" \
+              -H "Content-Type: application/json" \
+              -d "{\"name\":\"$APP_NAME\",\"description\":\"Auto-generated app for $APP_NAME\"}" \
+              "$COOLIFY_API_URL/apps")
+            
+            app_id=$(echo "$create_app_response" | jq -r '.data.id')
+            
+            if [ -z "$app_id" ] || [ "$app_id" == "null" ]; then
+              echo "Failed to create app for $APP_NAME"
+              echo "Create app response: $create_app_response"
+              exit 1
+            fi
+            
+            echo "Created new app with ID: $app_id"
+          else
+            echo "Found existing app with ID: $app_id"
           fi
 
           # 2. Check if resource exists (resource name = app name)
