--- a/.github/workflows/deploy-demo-apps.yml
+++ b/.github/workflows/deploy-demo-apps.yml
@@ -94,6 +94,8 @@ jobs:
       
           # 3. Get application information  
           applications_response=$(curl -s -H "Authorization: Bearer $COOLIFY_TOKEN" "$COOLIFY_API_URL/v1/projects/$project_uuid/$DEPLOYMENT")
+          echo "Full response from Coolify API:"
+          echo "$applications_response"
           application_uuid=$(echo "$applications_response" | jq -r '.uuid // empty')
           application_name=$(echo "$applications_response" | jq -r '.name // empty')
 
