completed app adding

--- a/.github/workflows/deploy-demo-apps.yml
+++ b/.github/workflows/deploy-demo-apps.yml
@@ -3,7 +3,7 @@ name: Deploy Apps to Coolify
 on:
   push:
     branches:
-      - apps-publish
+      - main
     paths:
       - 'apps/**'
   workflow_dispatch:
