--- a/template/app/package.json
+++ b/template/app/package.json
@@ -4,8 +4,7 @@
   "scripts": {
     "add-app": "node src/apps/add-app.cjs",
     "remove-app": "node src/apps/remove-app.cjs",
-    "update-routes": "node src/apps/auto-update-routes.cjs",
-    "watch-apps": "node src/apps/watch-and-update.cjs"
+    "update-routes": "node src/apps/auto-update-routes.cjs"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.523.0",
